[gd_scene load_steps=3 format=3 uid="uid://dyh8k3n4mp1gh"]

[ext_resource type="Script" path="res://characters/main_character.gd" id="1_x8m2k"]
[ext_resource type="Script" path="res://scripts/act5_farmhouse_festival.gd" id="2_n9s7q"]

[node name="Act5_FarmhouseFestival" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_n9s7q")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.8, 0.9, 0.7, 1)

[node name="FarmhouseExterior" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="House" type="ColorRect" parent="FarmhouseExterior"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.7, 0.5, 0.3, 1)

[node name="Roof" type="ColorRect" parent="FarmhouseExterior/House"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -170.0
offset_top = -50.0
offset_right = 170.0
offset_bottom = -20.0
grow_horizontal = 2
color = Color(0.4, 0.2, 0.1, 1)

[node name="Door" type="ColorRect" parent="FarmhouseExterior/House"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -80.0
offset_right = 25.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.3, 0.2, 0.1, 1)

[node name="ThriveGarden" type="Control" parent="FarmhouseExterior"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -200.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0

[node name="GardenRows" type="GridContainer" parent="FarmhouseExterior/ThriveGarden"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 5

[node name="Tomato1" type="Label" parent="FarmhouseExterior/ThriveGarden/GardenRows"]
layout_mode = 2
text = "üçÖ"

[node name="Carrot1" type="Label" parent="FarmhouseExterior/ThriveGarden/GardenRows"]
layout_mode = 2
text = "ü•ï"

[node name="Lettuce1" type="Label" parent="FarmhouseExterior/ThriveGarden/GardenRows"]
layout_mode = 2
text = "ü•¨"

[node name="Herb1" type="Label" parent="FarmhouseExterior/ThriveGarden/GardenRows"]
layout_mode = 2
text = "üåø"

[node name="Corn1" type="Label" parent="FarmhouseExterior/ThriveGarden/GardenRows"]
layout_mode = 2
text = "üåΩ"

[node name="Tomato2" type="Label" parent="FarmhouseExterior/ThriveGarden/GardenRows"]
layout_mode = 2
text = "üçÖ"

[node name="Carrot2" type="Label" parent="FarmhouseExterior/ThriveGarden/GardenRows"]
layout_mode = 2
text = "ü•ï"

[node name="Lettuce2" type="Label" parent="FarmhouseExterior/ThriveGarden/GardenRows"]
layout_mode = 2
text = "ü•¨"

[node name="Herb2" type="Label" parent="FarmhouseExterior/ThriveGarden/GardenRows"]
layout_mode = 2
text = "üåø"

[node name="Squash1" type="Label" parent="FarmhouseExterior/ThriveGarden/GardenRows"]
layout_mode = 2
text = "üéÉ"

[node name="CompostBin" type="Control" parent="FarmhouseExterior"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -40.0
offset_right = -30.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 2

[node name="CompostRect" type="ColorRect" parent="FarmhouseExterior/CompostBin"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4, 0.3, 0.2, 1)

[node name="CompostLabel" type="Label" parent="FarmhouseExterior/CompostBin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -10.0
offset_right = 15.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "‚ôªÔ∏è"
horizontal_alignment = 1

[node name="Player" type="Node2D" parent="."]
position = Vector2(200, 350)
script = ExtResource("1_x8m2k")

[node name="PlayerSprite" type="ColorRect" parent="Player"]
offset_left = -25.0
offset_top = -50.0
offset_right = 25.0
color = Color(0.8, 0.6, 0.4, 1)

[node name="FarmerClothes" type="ColorRect" parent="Player"]
offset_left = -30.0
offset_top = -40.0
offset_right = 30.0
offset_bottom = 20.0
color = Color(0.5, 0.7, 0.4, 1)

[node name="ZenAura" type="Label" parent="Player"]
offset_left = -20.0
offset_top = -70.0
offset_right = 20.0
offset_bottom = -50.0
text = "üßò‚Äç‚ôÇÔ∏è‚ú®"
horizontal_alignment = 1

[node name="Guests" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Kyle" type="Control" parent="Guests"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -25.0
offset_right = 150.0
offset_bottom = 25.0
grow_vertical = 2

[node name="KyleSprite" type="ColorRect" parent="Guests/Kyle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.8, 0.6, 1)

[node name="ConfusedFace" type="Label" parent="Guests/Kyle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "ü§Ø"
horizontal_alignment = 1

[node name="Harrison" type="Control" parent="Guests"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 300.0
offset_top = -25.0
offset_right = 350.0
offset_bottom = 25.0
grow_vertical = 2

[node name="HarrisonSprite" type="ColorRect" parent="Guests/Harrison"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.9, 0.7, 0.5, 1)

[node name="ImprovedFace" type="Label" parent="Guests/Harrison"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "üòä"
horizontal_alignment = 1

[node name="Sandra" type="Control" parent="Guests"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 500.0
offset_top = -25.0
offset_right = 550.0
offset_bottom = 25.0
grow_vertical = 2

[node name="SandraSprite" type="ColorRect" parent="Guests/Sandra"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.8, 0.7, 0.6, 1)

[node name="ProudFace" type="Label" parent="Guests/Sandra"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "ü•∞"
horizontal_alignment = 1

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FinalStatsPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 250.0
grow_horizontal = 0

[node name="FinalStatsContainer" type="VBoxContainer" parent="UI/FinalStatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/FinalStatsPanel/FinalStatsContainer"]
layout_mode = 2
text = "üåü TRANSFORMATION üåü"
horizontal_alignment = 1

[node name="BurnoutLabel" type="Label" parent="UI/FinalStatsPanel/FinalStatsContainer"]
layout_mode = 2
text = "üî• Burnout: 15%"

[node name="HealthLabel" type="Label" parent="UI/FinalStatsPanel/FinalStatsContainer"]
layout_mode = 2
text = "‚ù§Ô∏è Health: 95%"

[node name="SocialLabel" type="Label" parent="UI/FinalStatsPanel/FinalStatsContainer"]
layout_mode = 2
text = "üòä Social: 85%"

[node name="CookingLabel" type="Label" parent="UI/FinalStatsPanel/FinalStatsContainer"]
layout_mode = 2
text = "üç≥ Cooking: 80%"

[node name="FarmingLabel" type="Label" parent="UI/FinalStatsPanel/FinalStatsContainer"]
layout_mode = 2
text = "üå± Farming: 90%"

[node name="EmotionalLabel" type="Label" parent="UI/FinalStatsPanel/FinalStatsContainer"]
layout_mode = 2
text = "üßò Emotional: 85%"

[node name="DialogueBox" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -120.0
offset_right = 400.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="DialogueText" type="RichTextLabel" parent="UI/DialogueBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center][color=green]You've created something beautiful. A home, a garden, a life that actually makes sense.[/color][/center]"

[node name="EndingButtons" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="ZenFarmerBtn" type="Button" parent="UI/EndingButtons"]
layout_mode = 2
text = "üßò‚Äç‚ôÇÔ∏è Embrace Zen Farmer Life"

[node name="ClimateStartupBtn" type="Button" parent="UI/EndingButtons"]
layout_mode = 2
text = "üå± Start Ethical Climate Startup"

[node name="TeachOthersBtn" type="Button" parent="UI/EndingButtons"]
layout_mode = 2
text = "üéì Teach Burnt-out Bros"
